--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                 Hallenbarter</h1>
             <hr>
             <p>jonash.ch</p>
+			  <br>
+			  <h3>Info April 22 | <a href = "https://jonash.ch/galaxus.html" target = "_blanc">Vertiefungsarbeit Galaxus Digitec</a></h3>
             </div>
+	  
+	  
         
     </header>
     
