--- a/galaxus.html
+++ b/galaxus.html
@@ -1,22 +1,13 @@
 <head>
-    <title>Rodooky - an artificial intelligence</title>
+    <title>VA Galaxus Digitec</title>
     <meta charset="utf-8">
   	<meta name="robots" content="noindex">
    	<html lang='de'>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="rodooky.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   	<meta name="author" content="Jonas Hallenbarter">
-  	<meta name='description' content='Eine Projektarbeit für Marketingfachsprache'>
-	
-	<!--Analytics Tool - Marketing-->
-	<script type="text/javascript">
-	  (function(c,l,a,r,i,t,y){
-		  c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-		  t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-		  y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-	  })(window, document, "clarity", "script", "az103uhb0e");
-	</script>
+  	<meta name='description' content='Vertiefungsarbeit 2022'>
+	<link rel="shortcut icon" href="logo_web.png"/>
 
 </head>
 
@@ -26,8 +17,16 @@
 		  margin: 0;
 		  padding: 0;
 		}
+	  
+	  .div {
+		margin: 0;
+		padding: 0;
+	  }
 	</style>
-  <iframe width="100%" height="100%" src="https://xd.adobe.com/embed/ba74cb51-d82f-4d02-9998-31282f70ade9-ef27/" frameborder="0" allowfullscreen></iframe>
+  <div>
+  	<iframe width="100%" height="100%" src="https://xd.adobe.com/embed/f88cfd5f-3418-426e-bb47-c1decbb46607-addf/" frameborder="0" allowfullscreen></iframe>
+  </div>
+  
    
     
 </body>
