--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
 <body>
 
+    <div id="footer-cookie">
+        <span id="description">
+            Die Webseite verwendet Clarity (Microsoft) um den Verkehr auf der Webseite zu messen
+            
+            Erfahren Sie mehr auf <a href="https://privacy.microsoft.com/de-de/privacystatement">microsoft.com</a>
+        </span>
+        <span id="accept"><a href="javascript:void(0)" title="Akzeptieren">Akzeptieren</a></span>
+      </div>
+
     <header class="bg-index">
             <a id="logoid"><img class="logoheader" src="logo_450px.png" alt="logo"></a>
         
